# Parallel_mergesort

./: CMakeLists.txt  README.md
src/: mergesort.cpp
test/: Punctuation_1.txt  Punctuation_2.txt  delimeter_1.txt  delimeter_2.txt  large_text.txt  small_text.txt  sorted_words.txt  unsorted_words.txt
